--- a/src/app/components/profil/twitch/twitch.component.html
+++ b/src/app/components/profil/twitch/twitch.component.html
@@ -3,6 +3,7 @@
     [enableService]="false"
     [value]="helpMessage"
     escape="false"
+    [showTransitionOptions]="'0ms'"
     styleClass="mb-6" />
 
   <label for="twitch_channel" class="font-bold block mb-2"
