Progression dans la refonte

--- a/src/app/components/admin/anniversaires/anniversaires.component.html
+++ b/src/app/components/admin/anniversaires/anniversaires.component.html
@@ -13,7 +13,7 @@
       <th pSortableColumn="member.name" class="min-w-[270px]">
         Membre <p-sortIcon field="member.name" />
       </th>
-      <th pSortableColumn="date" class="w-[255px]">
+      <th pSortableColumn="date" class="min-w-[255px] w-[255px]">
         Date <p-sortIcon field="date" />
       </th>
     </tr>
