--- a/src/app/components/profil/anniversaire/anniversaire.component.html
+++ b/src/app/components/profil/anniversaire/anniversaire.component.html
@@ -27,7 +27,7 @@
     (onClearClick)="birthDateUpdated()"
     [disabled]="loading" />
 
-  <div class="flex items-center mt-6">
+  <div class="flex mt-6">
     <p-button
       label="Sauvegarder"
       severity="success"
