--- a/src/app/components/profil/carte-cube-stalker/carte-cube-stalker.component.html
+++ b/src/app/components/profil/carte-cube-stalker/carte-cube-stalker.component.html
@@ -134,7 +134,7 @@
         </div>
       </div>
 
-      <div class="flex items-center mt-6" *ngIf="canUpload">
+      <div class="flex mt-6" *ngIf="canUpload">
         <p-button
           label="Sauvegarder"
           severity="success"
