--- a/src/app/components/profil/roles/roles.component.html
+++ b/src/app/components/profil/roles/roles.component.html
@@ -27,7 +27,7 @@
       </ng-container>
     </div>
 
-    <div class="flex items-center mt-6">
+    <div class="flex mt-6">
       <p-button
         label="Sauvegarder"
         severity="success"
