--- a/src/app/components/profil/twitch/twitch.component.html
+++ b/src/app/components/profil/twitch/twitch.component.html
@@ -10,7 +10,7 @@
     >Nom de votre chaîne Twitch</label
   >
 
-  <p-inputGroup>
+  <p-inputGroup styleClass="w-auto">
     <p-inputGroupAddon>https://www.twitch.tv/</p-inputGroupAddon>
     <input
       type="text"
@@ -21,7 +21,7 @@
       (keyup)="channelNameUpdated()" />
   </p-inputGroup>
 
-  <div class="flex items-center mt-6">
+  <div class="flex mt-6">
     <p-button
       label="Sauvegarder"
       severity="success"
