--- a/src/app/components/profil/ville/ville.component.html
+++ b/src/app/components/profil/ville/ville.component.html
@@ -35,7 +35,7 @@
     appendTo="body"
     [disabled]="loading" />
 
-  <div class="flex items-center mt-6">
+  <div class="flex mt-6">
     <p-button
       label="Sauvegarder"
       severity="success"
