--- a/src/app/components/agent/agent.component.html
+++ b/src/app/components/agent/agent.component.html
@@ -1,6 +1,6 @@
 <div class="py-6">
   <!-- Page title -->
-  <h2>Administration</h2>
+  <h2>Agent</h2>
 
   <div
     class="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
