Progression dans la refonte

--- a/src/app/components/admin/messages-anniversaire/edit-dialog/edit-dialog.component.html
+++ b/src/app/components/admin/messages-anniversaire/edit-dialog/edit-dialog.component.html
@@ -14,7 +14,8 @@
     <app-em-emoji-picker
       theme="dark"
       (onEmoji)="onEmoji($event)"
-      [updatePreview]="false" />
+      [updatePreview]="false"
+      styleClass="emoji-overlay" />
   </p-inputGroupAddon>
 </p-inputGroup>
 <small id="help-message"
